crates/gpui-form-macros/tests/ui/fail/duplicate_option.rs
use gpui_form_macros::FormStore;

#[derive(FormStore)]
#[form(store = ExampleForm, store = OtherForm)]
struct Example {
    value: String,
}

fn main() {}
