crates/gpui-form-macros/tests/ui/fail/duplicate_option.stderr
error: duplicate form option `store`
 --> tests/ui/fail/duplicate_option.rs:4:29
  |
4 | #[form(store = ExampleForm, store = OtherForm)]
  |                             ^^^^^
